添加随机背景

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     </style>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body id="cover">
 <header class="globalHeader">
     <form class="searchForm" method="get" action="https://www.baidu.com/s">
         <input type="text" name="wd">
@@ -38,6 +38,10 @@
     </ul>
 </main>
 
+
+<div id="set">
+set
+</div>
 <script src="//at.alicdn.com/t/font_1494976_sztjfzyy5qp.js"></script>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="main.js"></script>
