--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>前航导航网站</title>
+    <title>至简导航</title>
     <style type="text/css">
         .icon {
             width: 1em; height: 1em;
@@ -18,8 +18,8 @@
 <body id="cover">
 <header class="globalHeader">
     <form class="searchForm" method="get" action="https://www.baidu.com/s">
-        <input type="text" name="wd">
-        <button type="submit">search</button>
+        <input type="text" name="wd" autocomplete="off">
+        <button type="submit">SEARCH</button>
     </form>
 </header>
 <main class="globalMain">
@@ -39,10 +39,12 @@
 </main>
 
 
-<div id="set">
-set
+<div id="reset">
+    <svg class="icon" aria-hidden="true">
+        <use xlink:href="#icon-reset"></use>
+    </svg>
 </div>
-<script src="//at.alicdn.com/t/font_1494976_sztjfzyy5qp.js"></script>
+<script src="//at.alicdn.com/t/font_1494976_3jqdqytv1co.js"></script>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="main.js"></script>
 </body>
