--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 <body id="cover">
 <header class="globalHeader">
     <form class="searchForm" method="get" action="https://www.baidu.com/s">
-        <input type="text" name="wd" autocomplete="off">
+        <input type="text" name="wd" autocomplete="off" id="linshi">
         <button type="submit">SEARCH</button>
     </form>
 </header>
