啥都没 啥都啥都没更新

--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,14 @@
     </style>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body id="cover">
-<header class="globalHeader">
+<body id="cover" class="yyes">
+<header class="globalHeader" class="yyes">
     <form class="searchForm" method="get" action="https://www.baidu.com/s">
-        <input type="text" name="wd" autocomplete="off" id="linshi">
+        <input type="text" name="wd" autocomplete="off" id="linshi" class="nno">
         <button type="submit">SEARCH</button>
     </form>
 </header>
-<main class="globalMain">
+<main class="globalMain" class="yyes">
     <ul class="siteList">
         <li class="last">
             <div class="addButton">
@@ -39,7 +39,7 @@
 </main>
 
 
-<div id="reset">
+<div id="reset" class="yyes">
     <svg class="icon" aria-hidden="true">
         <use xlink:href="#icon-reset"></use>
     </svg>
